--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,23 @@
+body{
+  background-image: url("../img/pizzaBackground.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.content{
+  width: 400px;
+  margin: 0 auto;
+  margin-top: 30px;
+  padding: 30px;
+  border-radius: 3%;
+  background-color: rgba(255, 255, 255, 0.85);
+}
+p {
+  font-family: roboto;
+  font-size: 18px;
+}
+#button{
+  display: flex; justify-content: center;
+}
 #viewOrder {
   display: none;
 }
