--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,9 @@ body{
   background-color: rgba(255, 255, 255, 0.85);
 }
 p {
-  font-family: roboto;
+  font-family: sans-serif;
   font-size: 18px;
+  font-weight: bold;
 }
 #button{
   display: flex; justify-content: center;
